@@ -105,7 +105,7 @@
 
                 <para>All users are granted access to their private
                 per-user journals. However, by default, only root and
-                users who are members of the <literal>systemd-journal</literal>
+                users who are members of the <literal>journal</literal>
                 group get access to the system journal and the
                 journals of other users.</para>
 
