@@ -20,8 +20,8 @@ d /run/systemd/network 0755 root root -
 d /run/systemd/network/links 0755 root root -
 d /run/systemd/network/leases 0755 root root -
 
-z /run/log/journal 2755 root systemd-journal - -
-Z /run/log/journal/%m ~2750 root systemd-journal - -
+z /run/log/journal 2755 root journal - -
+Z /run/log/journal/%m ~2750 root journal - -
 
-z /var/log/journal 2755 root systemd-journal - -
-z /var/log/journal/%m 2755 root systemd-journal - -
+z /var/log/journal 2755 root journal - -
+z /var/log/journal/%m 2755 root journal - -
