@@ -13,6 +13,7 @@ systemd System and Service Manager
     - rename unit systemd-journald.socket to journald.socket;
     - rename unit systemd-journald.service to journald.service;
     - rename systemd-journald to journald;
+    - rename system group systemd-journal to journal;
  * remove systemd-journal-remote program;
  * remove systemd-journal-gatewayd program, service and socket;
  * remove gnutls support;
